@@ -4,6 +4,8 @@
 	`eval-and-compile'. Move (require 'advice) to the beginning.
 	(tinypath--startup-no-messages): Update docstring.
 	(tinypath-time-record):Correct push to `tinypath--time-data'.
+	(tinypath-load-path-remove-old): Rewrite without `remove-if'.
+	(tinypath-load-path-remove): Add `nreverse' to preserve order.
 
 2013-06-14 Fri  Jari Aalto  <jari.aalto@cante.net>
 
